Fix profile card spacing

--- a/src/components/ProfileTabs/ProfileTabs.module.scss
+++ b/src/components/ProfileTabs/ProfileTabs.module.scss
@@ -8,7 +8,7 @@
   // background-color: var(--background-card);
   width: 100%;
   border-radius: 0;
-  padding-top: 8px;
+  padding-top: 14px;
   border-bottom: 1px solid var(--devider);
   border-top: none;
 }
