--- a/src/pages/Profile.module.scss
+++ b/src/pages/Profile.module.scss
@@ -325,7 +325,7 @@
 .joined {
   font-weight: 400;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 20px;
   text-align: right;
   color: var(--text-tertiary-2);
 }
@@ -420,7 +420,7 @@
   color: var(--text-tertiary-2);
   font-weight: 400;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 20px;
   .verified {
     display: flex;
     align-items: center;
